# docs_ci

./: .env.example  AGENTS.md  CLAUDE.md  LICENSE  README.md  REAL_DOCS_TESTING.md  ROADMAP.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
docs_ci/: __init__.py  checker.py  cli.py
examples/: rules.example.yaml
src/docs_ci/: __main__.py  cache.py  cli.py  config.py  diff.py  discover.py  judge.py  judges.py  prompts.py  report.py  runner.py
tests/: test_cache.py  test_checker.py  test_cli.py  test_config.py  test_diff.py  test_discover.py  test_judge.py  test_judges.py  test_report.py  test_report_github.py  test_runner.py
tests/fixtures/: rules.yaml
tests/fixtures/docs/: missing-example.md  ok-page.md
