[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-ci"
version = "0.1.0"
description = "CI tools for documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
docs-ci = "docs_ci.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["docs_ci*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
